uniformate alcune notazioni nei documenti

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -16,7 +16,6 @@
 \include{diario}
 \tableofcontents
 \listoffigures
-\newpage
 
 
 
@@ -978,7 +977,7 @@ Si è raggiunto l'obiettivo prefissato di assegnare ogni ruolo a ciascun compone
 % i colori danno problemi di visualizzazione alle linee
 
 
-È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito \gloss{latex}?
+È possibile ricavare interessanti statistiche dalla tabella (\ref{tab:gen}) e dal grafico di ripartizione oraria (\ref{fig:gen2}): % che riferimento ha inserito latex?
 \begin{itemize}
 \item Il ruolo {\Rx} richiede il quantitativo di ore minimo rispetto alle altre mansioni: inizialmente è richiesto uno sforzo maggiore per la stesura del \emph{Piano di Progetto}, ma superata la fase di {\AR} questo ruolo è richiesto in misura minore.
 \item Il ruolo {\AMx} richiede una discreta quantità di ore soprattutto in fase di {\AR} per definire un ambiente di sviluppo ideale. Completata questa fase il ruolo è richiesto in misura minore.
