--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -1,5 +1,5 @@
 % Analisi dei Requisiti
-% da compilare con il comando pdflatex Analisi_dei_Requisiti_x.x.x.tex
+% da compilare con il comando pdflatex Analisi_dei_requisiti_x.x.x.tex
 
 \input{../../util/hx-ambiente}
 
@@ -18,7 +18,7 @@
 \tableofcontents
 \listoffigures
 
-\newpage
+
 
 \newcommand{\myimg}[1] {
 	\begin{figure}[H]
@@ -203,7 +203,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Precondizione}: il sistema avviato mostra la pagina iniziale dell'applicazione;
 	\item \textbf{Postcondizione}: il sistema crea un progetto vuoto e presenta all'attore un diagramma delle classi vuoto con un menù;
 	\item \textbf{Scenario principale}:
-	\begin{itemize} % >>> disegno con \gloss{Astah}? UC3.1 <<<
+	\begin{itemize} % >>> disegno con Astah? UC3.1 <<<
 		\item l'attore deve inserire il nome del progetto.
 	\end{itemize}
 \end{itemize}
