aggiunto obbligo di usare Astah

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -176,6 +176,7 @@ Il presente documento si divide in tre sezioni principali:
 		\item \gloss{Diagramma delle attività}: descrive i passi di una procedura.
 		\item Diagramma di sequenza: descrive uno scenario, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 	\end{itemize}
+	Per disegnare i diagrammi appena esposti, i progettisti devono usare il software \gloss{Astah} ed esportare i diagrammi in formato PNG.
 
 	\paragraph{Stile di progettazione} L'architettura di \proj{} è segue lo stile dell'\textbf{orientazione agli oggetti}; perciò, le componenti software descritte nei diagrammi delle classi sono:
 	\begin{itemize}
