--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -3018,6 +3018,18 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hypertarget{RFO6.1}{RFO6.1} & il sistema deve visualizzare un messaggio d'errore se l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti& \hyperlink{Interno}{Interno}\\
 & & \hyperref[UC7.1]{UC7.1}\\ \hline
 
+\hypertarget{RFO7}{RFO7} & il sistema genera il programma in Java & \hyperlink{Interno}{Interno}\\ \hline
+
+\hypertarget{RFO7.1}{RFO7.1} & il sistema traduce il file JSON in un oggetto Java corrispondente& \hyperlink{Interno}{Interno}\\ \hline
+
+\hypertarget{RFO7.2}{RFO7.2} & il sistema traduce l'oggetto Java nel corrispondente codice sorgente Java & \hyperlink{Interno}{Interno}\\ \hline
+
+\hypertarget{RFO8}{RFO8} & il sistema compila il codice sorgente Java generato& \hyperlink{Interno}{Interno}\\ \hline
+	
+\hypertarget{RFO9}{RFO9} & il sistema crea una cartella compressa contenente il file JSON, il codice sorgente Java e il programma Java compilato & \hyperlink{Interno}{Interno}\\ \hline
+
+\hypertarget{RFO10}{RFO10} & il sistema elabora una risposta htto contenente l'indirizzo della cartella compressa creata & \hyperlink{Interno}{Interno}\\ \hline
+
 \caption[Requisiti Funzionali]{Requisiti Funzionali}
 \label{tabella:req0}
 \end{longtable}
@@ -3773,6 +3785,18 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hypertarget{RFO6.1}{RFO6.1} & \hyperlink{Interno}{Interno}\\
 & \hyperref[UC7.1]{UC7.1}\\ \hline
 
+\hyperlink{RFO7}{RFO7} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO7.1}{RFO7.1} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO7.2}{RFO7.2} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO8}{RFO8} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO9}{RFO9} & \hyperlink{Interno}{Interno}\\\hline
+
+\hyperlink{RFO10}{RFO10} & \hyperlink{Interno}{Interno}\\\hline
+
 \hyperlink{RQO1}{RQO1} & \hyperlink{Capitolato}{Capitolato}\\ \hline
 
 \hyperlink{RQO1.1}{RQO1.1} & \hyperlink{Interno}{Interno}\\ \hline
@@ -3986,6 +4010,12 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 & \hyperlink{RFO5.3}{RFO5.3}\\
 & \hyperlink{RFO5.3.1}{RFO5.3.1}\\
 & \hyperlink{RFO6.1}{RFO6.1}\\
+& \hyperlink{RFO7}{RFO7}\\
+& \hyperlink{RFO7.1}{RFO7.1}\\
+& \hyperlink{RFO7.2}{RFO7.2}\\
+& \hyperlink{RFO8}{RFO8}\\
+& \hyperlink{RFO9}{RFO9}\\
+& \hyperlink{RFO10}{RFO10}\\
 & \hyperlink{RQO1.1}{RQO1.1}\\
 & \hyperlink{RQO1.1.1}{RQO1.1.1}\\
 & \hyperlink{RQO1.2}{RQO1.2}\\
@@ -4377,7 +4407,7 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 \hline
 \textbf{Tipo} & \textbf{Obbligatorio} & \textbf{Desiderabile} & \textbf{Facoltativo}\\
 \hline
-Funzionale & 159 & 11 & 0\\ \hline
+Funzionale & 165 & 11 & 0\\ \hline
 Prestazionale & 0 & 0 & 0\\ \hline
 Di Qualità & 8 & 0 & 2\\ \hline
 Di Vincolo & 7 & 2 & 0\\ \hline
