--- a/doc/Interni/Verbali/diario.tex
+++ b/doc/Interni/Verbali/diario.tex
@@ -15,6 +15,11 @@
 \begin{document}
 
 \begin{diario}
+	2.0.0 & {\GG} (Responsabile) & 02/03/2017 & Approvazione documento \\ \hline
+	1.1.0 & {\AZ} {Verificatore} & 02/03/2017 & Verifica documento \\\hline
+	1.0.4 & {\LS} {Responsabile} & 25/02/2017 & Stesura verbale del 24/02/2017 \\\hline
+	1.0.3 & {\LS} {Responsabile} & 23/02/2017 & Stesura verbale del 22/02/2017 \\\hline
+	1.0.2 & {\LS} {Responsabile} & 17/02/2017 & Stesura verbale del 16/02/2017 \\\hline
 	1.0.1 & {\GG} (Responsabile) & 09/02/2017 & Scorporamento dei verbali in documenti separati \\ \hline
 	1.0.0 & {\LB} (Responsabile) & 09/01/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 09/01/2017 & Verifica documento \\ \hline
