--- a/doc/Interni/Verbali/VE_16-12-15.tex
+++ b/doc/Interni/Verbali/VE_16-12-15.tex
@@ -25,6 +25,10 @@
 	\item[Partecipanti] \GP, \ALL.
 \end{description}
 
-Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi software che il nostro \gloss{editor} dovrà modellare dev'essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (\gloss{applicazione web} o desktop).
-
+Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove.
+Decisioni prese:
+\begin{itemize}
+\item abbiamo appurato che il dominio di programmi software che il nostro \gloss{editor} dovrà modellare dev'essere mirato ad un particolare ambiente applicativo; 
+\item linguaggio da usare e natura del software (\gloss{applicazione web} o desktop) liberi.
+\end{itemize}
 \end{document}
