--- a/doc/Interni/Verbali/VE_16-12-21.tex
+++ b/doc/Interni/Verbali/VE_16-12-21.tex
@@ -25,6 +25,10 @@
 	\item[Partecipanti] \GP, \ALL.
 \end{description}
 
-Durante la riunione è stato chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto; inoltre è sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal software. Il \gloss{diagramma delle attività} sarà ispirato al \gloss{diagramma Nassi–Shneiderman} utilizzando una rappresentazione “a blocchi”.
-
+Durante la riunione sono state prese le seguenti decisioni:
+\begin{itemize}
+\item chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto;
+\item sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal software;
+\item il \gloss{diagramma delle attività} sarà ispirato al \gloss{diagramma Nassi–Shneiderman} utilizzando una rappresentazione “a blocchi”.
+\end{itemize}
 \end{document}
