aggiunte a intro.tex, tecnologie.tex e arch.tex

--- a/doc/Esterni/Specifica_tecnica/tex/intro.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/intro.tex
@@ -19,11 +19,19 @@ Ci è parso utile indicizzare i \emph{design patter} utilizzati; per questo, li 
 \subsection{Riferimenti} \label{sec:ref}
 
 \subsubsection{Riferimenti normativi}
-% ...
+\begin{itemize}
+	\item Norme di Progetto: \NdP.
+\end{itemize}
 
 \subsubsection{Riferimenti informativi}
 \begin{itemize}
 	\item E. Gamma, R. Helm, R. Johnson, J. Vlissides, \emph{Design Patterns: Elements of Reusable Object-Oriented Software}.
+	\item Libreria JointJS: \url{www.jointjs.com/opensource}, visitato in data 01/03/2017;
+	\item \emph{Plug-in} UML per JointJS: \url{resources.jointjs.com/demos/umlcd}, visitato in data 01/03/2017;
+	\item Libreria \backbonejs: \url{backbonejs.org}, visitato in data 01/03/2017;
+	\item Libreria \jquery: \url{jquery.com}, visitato in data 01/03/2017;
+	\item Libreria \requirejs: \url{www.requirejs.org}, visitato in data 01/03/2017;
+	\item Libreria \lodash: \url{lodash.com}, visitato in data 01/03/2017;
 	\item Server Apache Tomcat: \url{tomcat.apache.org}, visitato in data 01/03/2017.
 	\item Libreria Pivotal Spring: \url{spring.io}, visitato in data 01/03/2017.
 	\item Libreria StringTemplate: \url{stringtemplate.org}, visitato in data 01/03/2017.
