--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -4,33 +4,32 @@
 
 
 
-\subsection{\gloss{Client}}
+\subsection{\gloss{Client}} \label{sec:tech_client}
 Implementeremo il client di \proj{} con le tecnologie web richieste dal capitolato d'appalto: \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript}. Di seguito elenchiamo e descriviamo le librerie JavaScript di cui il nostro client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
 \subsubsection{JointJS}
-La libreria \jointjs{} (\url{https://www.jointjs.com/opensource}) è una libreria open-source per realizzare \gloss{editor} di diagrammi interattivi, in maniera altamente personalizzabile. %Dipende da HTML5 e da alcune altre librerie JavaScript ma offre numerosi plug-in per realizzare particolari tipi di grafi.
+La libreria \jointjs{} (\url{www.jointjs.com/opensource}) è una libreria open-source per realizzare \gloss{editor} di diagrammi interattivi, in maniera altamente personalizzabile.
 
 La libreria sfrutta le seguenti tecnologie per il suo funzionamento:
 \begin{itemize}
-	\item \html{}: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<canvas>}, che conterrà un diagramma.
-	\item Le seguenti librerie \js{}:
+	\item \html: \jointjs{} richiede che una pagina \html{} sia popolata con un tag \texttt{<canvas>}, che conterrà un diagramma.
+	\item Le seguenti librerie \js:
 	\begin{itemize}
-		\item \jquery{};
-		\item \lodash{};
-		\item \backbonejs{}.
+		\item \jquery;
+		\item \lodash;
+		\item \backbonejs.
 	\end{itemize}
 \end{itemize}
+
+Di \jointjs{} sfruttiamo un \emph{plug-in} per realizzare diagrammi UML. Tale \emph{plug-in} offre delle forme geometriche e delle frecce che ci servono per il disegno del diagramma delle classi e dei diagrammi a blocchi di ogni metodo.
 
 \subsubsection{\backbonejs}
 La libreria \backbonejs{} permette di strutturare applicazioni web single page (SPA) fornendo \textbf{modelli} con binding di chiave-valore, eventi, \textbf{collezioni} e \textbf{viste} con una gestione degli eventi dichiarativa. Essa offre inoltre una interfaccia RESTful.
 
-A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC (collection), al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà il lato client di \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello \mvc{}
-offerto da \backbonejs{}.	
-
+A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC (collection), al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà il lato client di \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello \mvc{} offerto da \backbonejs{}.	
 
 \subsubsection{\jquery}
 La libreria \jquery{} è sfruttata da \jointjs{} ed è necesaria per semplificare varie operazioni di basso livello.
-
 
 \subsubsection{\requirejs}
 La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà principalmente di risolvere dipendenze delle librerie \js{} utilizzate.
@@ -38,17 +37,15 @@ La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà 
 \subsubsection{\lodash}
 La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Rispetto alla simile libreria \emph{Underscore}, questa fornisce più performance, più features e miglior documentazione. Essa inoltre è usata da \jointjs{}.
 
-
 \subsubsection{qunit}
 assertions, test di regressione
+
 \subsubsection{sinonjs}
 stubs, mocks, (test spies??)
 
 
 
-
 \subsection{Server}
-
 
 \subsubsection{Apache Tomcat}
 Il \emph{back end} della nostra applicazione è ospitato su un server Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
@@ -57,7 +54,7 @@ Il \emph{back end} della nostra applicazione è ospitato su un server Apache Tom
 Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source Spring (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
 
 \subsubsection{StringTemplate}
-StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Il server la utilizza per:
+StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Il server della nostra applicazione la utilizza per:
 \begin{enumerate}
 	\item creare dei template di codice Java, inframmezzati da speciali marcatori definiti da StringTemplate;
 	\item popolare tali template con i dati ricevuti dal client.
@@ -68,9 +65,3 @@ I marcatori definiti dalla libreria servono da segnaposto per ospitare i dati ot
 Google Gson è una libreria open-source disponibile all'indirizzo \url{github.com/google/gson}. Essa permette di convertire un oggetto JSON in un oggetto Java che abbia, come campi dati, un sovrainsieme delle chiavi presenti nell'oggetto JSON; l'oggetto JSON dev'essere contenuto in una stringa Java. I valori delle chiavi dell'oggetto JSON diventano i valori dei campi dati dell'oggetto Java. La libreria permette anche il procedimento inverso (da Java a JSON), che però non usiamo nella nostra applicazione.
 
 %%% [altro...]
-
-
-
-\subsection{Linguaggio target}
-
-%%% [...]
